--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="ico/favicon.ico"" type="image/x-icon">
+    <link rel="stylesheet" href="access/css/style.css">
+    <link rel="shortcut icon" href="image/ico/favicon.ico"" type="image/x-icon">
     <title>Lock</title>
 </head>
 <body>
     <div class="lock" onclick="unlock()">
         <span class="key"></span>
     </div>
-
-    <script src="animation.js"></script>
+    <script src="access/js/animation.js"></script>
 </body>
 </html>
